scroll flickering fix

--- a/src/app/styles/images.scss
+++ b/src/app/styles/images.scss
@@ -22,7 +22,7 @@
     }
   }
 
-  min-height: 320px;
-  max-height: 320px;
-  padding-bottom: 20px;
+  min-height: 340px;
+  max-height: 340px;
+  padding-bottom: 40px;
 }
